# clipman

./: README.md  __init__.py  clipman.spec  exceptions.py  pyproject.toml  python3-clipman.spec  tags_marker.py  windows.py
.github/workflows/: python-publish.yml
.obs/: _service  workflows.yml
src/clipman/: __init__.py  __version__.py  exceptions.py  windows.py
