[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "clipman"
dynamic = ["version"] # setuptools_scm
authors = [
  {name="NikitaBeloglazov", email="nnikita.beloglazov@gmail.com"},
]
description = "Python3 module for working with clipboard. Created because pyperclip is discontinued."
readme = "README.md"
license = {text = "MPL 2.0 License"}

requires-python = ">=3.9"
dependencies = ["dbus_next"] # for KDE

keywords = ["clipman", "clipboard", "copy", "paste", "xclip"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]

[project.urls]
"Homepage" = "https://github.com/NikitaBeloglazov/clipman"
"Bug Tracker" = "https://github.com/NikitaBeloglazov/clipman/issues"

[tool.setuptools_scm]
# DO NOT add numbers to version. I decide which version I need to post
version_scheme = "release-branch-semver"

# get only tag, 3.2.0, not an 3.2.0.dev17+g2868326.d20240223abcdefghijklmnopqrstuvwxyz
git_describe_command = "git describe --tags"

# overwrites an fallback template
version_file = "src/clipman/__version__.py"
